feat: Se agrega endpoint para consultar espacios fisicos según varios filtros
